# invezgo-rust-sdk

./: Cargo.toml  LICENSE  README.md
examples/: demo.rs
src/: client.rs  error.rs  lib.rs
src/api/: alerts.rs  analysis.rs  journals.rs  membership.rs  mod.rs  portfolios.rs  posts.rs  recommendation.rs  screener.rs  search.rs  trades.rs  usage.rs  watchlists.rs
src/models/: analysis.rs  mod.rs  shared.rs
tests/: client_tests.rs
