[package]
name = "invezgo-sdk"
version = "0.1.0"
edition = "2021"
description = "Official fully-typed Rust SDK for the Invezgo API, covering all 105 endpoints 1:1."
license = "MIT"
readme = "README.md"
repository = "https://github.com/invezgo/invezgo-sdk"
keywords = ["invezgo", "sdk", "api", "finance", "indonesia"]
categories = ["api-bindings", "asynchronous"]

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
url = "2.5"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
